<resources>
    <string name="app_name">Drawings Manager</string>
    <string name="add_drawing">Add Drawing</string>
    <string name="marker_title">Marker Title</string>
    <string name="description">Description</string>
    <string name="assignee_name">Assignee Name</string>
    <string name="remarks">Remarks</string>
    <string name="attach_images">Attach Images</string>
    <string name="edit_drawing">Edit Drawing</string>
    <string name="drawing_title">Drawing Title</string>
    <string name="no_drawings_added_n_add_using_the_below">No Drawings added! \n Add using the \'+\' below!</string>
    <string name="confirm">Confirm</string>
    <string name="drawing_attachment">Drawing Attachment :</string>
    <string name="delete_drawing">Delete Drawing</string>
    <string name="edit_marker">Edit Marker</string>
    <string name="delete_marker">Delete Marker</string>
    <string name="irreversible">This is an irreversible operation, Do you want to proceed?</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="bug_report_summary">Submit any issues here!</string>
    <string name="bug_report">Bug Report</string>
    <string name="delete_everything">Delete All Data</string>
    <string name="delete">Delete</string>
    <string name="images">Images</string>
    <string name="assignee">Assignee</string>

</resources>